Cleanup, added check file for MoveMods